Revision history for Marquee

0.06 2012/06/23
  - Renamed distribution from MojoSimpleHTTPServer to Marquee.
  - Improved iter function to accept blessed obj in array.
  - Removed basic auth from router in favor of Auth plugin.

0.05 2012/06/20
  - Added ability to manage session data by signed cookie.
  - Added pod viewer for commandline.

0.04 2012/06/05
  - Fixed a bug that aroud_dispatch hook has been invoked on wrong condition.
  - Added iter function for array iteration.
  - Added MSHS class for context access shortcut.
  - Added MIME types for auto index.

0.03 2012/06/04
  - Made error documents replaceable.
  - Improved design for error documents and auto index.

0.02 2012/06/02
  - Fixed directory traversal vulnerability.
  - Improved template cache to expire on template change.
  - Improved SSI to die when include path not found.
  - Improved ep handler to auto escape.
  - Improved to include function to accepts local args.
  - Improved current_template function to get parent templates recursivly.

0.01 2012/05/06
  - initial release